--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@types/react": "^17.0.30",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.20",
     "@types/styled-components": "^5.1.15",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
@@ -49,6 +52,7 @@
     "@typescript-eslint/parser": "^5.1.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-prettier": "^4.0.0",
+    "redux-devtools": "^3.7.0"
   }
 }
